force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/CRM_to_UNFYD_Feedback_Event__e.object-meta.xml
<CustomObject>
    <label>CRM to UNFYD Feedback Event</label>
    <pluralLabel>CRM to UNFYD Feedbacks Event</pluralLabel>
</CustomObject>