force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Case_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Integration_ID__c</fullName>
    <description>SFDC unique identifier</description>
    <label>Case Integration ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>