force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Unique Case number created by SFDC</description>
    <label>Case Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>