force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>descriptive content (by agent)</description>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>