force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Ebot_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Ebot_Feedback__c</fullName>
    <description>Multiple values will be there which are comma-separated. (E.g.: “MOOD STAMP INCORRECT”,” INTENT INCORRECT”, etc)</description>
    <label>Ebot Feedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>