force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Email_Response_Modified__c.field-meta.xml
<CustomField>
    <fullName>Email_Response_Modified__c</fullName>
    <label>Email Response Modified</label>
    <length>10</length>
    <type>Text</type>
</CustomField>