force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Modified_Email_Response__c.field-meta.xml
<CustomField>
    <fullName>Modified_Email_Response__c</fullName>
    <description>Modified email content</description>
    <label>Modified Email Response</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>