force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <description>Category: Query/Request/Complaint</description>
    <label>Nature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>