force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Sub Type selected by Agent</description>
    <label>Subtype</label>
    <length>30</length>
    <type>Text</type>
</CustomField>