force-app/main/default/objects/CRM_to_UNFYD_Feedback_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Case Type selected by Agent</description>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>